Change Log:
=============================
- DanbooruDownloader20140204
  - Remove duplicated feature extension.
  - Sankaku Parser: Auto dump html page if encounter error.

- DanbooruDownloader20140202
  - Fix Sankaku saving: Illegal character in path name.
  - Auto save column order on datagrid.

- DanbooruDownloader20140126
  - Add option always put delay in batch download.
  - Add delay for download tags (follow Batch Download Delay).
  - Update flash parser for Sankaku.

- DanbooruDownloader20140117
  - Add option to add delay for Batch Download (in milisecond).

- DanbooruDownloader20131127
  - Fix tag download for danbooru.

- DanbooruDownloader20131122
  - Add starting page for download by tags.
  - Update Logging logic.
  - Add option to hide image containing Blacklisted tag.
  - Update Sankaku Tag download.

- DanbooruDownloader20131019
  - Update cookie handling.
  - Update WebClient to enable compression.
  - Update WebClient to add Accept Language header.
  - Update UrlResolver to use Queue.
  - Fix Download Tag form.

- DanbooruDownloader20130929
  - Add tag parser for Sankaku Complex.
  - Fix Form Provider save feature.
  - Use short version for rating for Sankaku Complex.
  - Fix batch job xml loading.

- DanbooruDownloader20130922
  - Add option to use per-provider tags.xml or global tags.xml
  - Add color for Unknown tags.
  - Update SankakuParser.
  - Fix Tag Blacklist.

- DanbooruDownloader20130706
  - Fix null reference error when updating tags from danbooru with loop tick.
  - Add configuration upgrade handler.
  - Add cookie viewer.

- DanbooruDownloader20130630
  - Add use cookie flag.
  - Update DownloadTag to support danbooru by using loop.
  - Add Clear Completed download button in Download List.
  - Marked green color for completed download and red for error.
  - and fixes.

- DanbooruDownloader20130223
  - Fix save/load download list.
  - Add save/load batch job list.

- DanbooruDownloader20130201